--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitfield-struct = "0.5.6"
 bitflags = "2.4.0"
 rand = "0.8.5"
 sdl2 = "0.36.0"
