--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,12 @@ edition = "2021"
 [dependencies]
 bitfield-struct = "0.5.6"
 bitflags = "2.4.0"
-sdl2 = "0.36.0"
+sdl2 = { version = "0.36.0", optional = true }
 
 [features]
 logging = []
+desktop = ["sdl2"]
+
+[[bin]]
+name = "desktop"
+required-features = ["desktop"]
