--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bitfield-struct = "0.5.6"
 bitflags = "2.4.0"
 console_error_panic_hook = { version = "0.1.7", optional = true }
+flate2 = "1.0.28"
 sdl2 = { version = "0.36.0", optional = true }
 wasm-bindgen = { version = "0.2.89", optional = true }
 
